html/css/style.css
/* ... */
.mod-node .no-logo { /* If a mod has no image, let's create a div for it anyway. */
    display: inline-block;
    max-width: 150px;
    padding-bottom: 47.80%; /* 122px / 255px */
    width: 100%;

    background: rgb(100, 100, 100);
}

.mod-node .mod-notifier { /* Places the top-right mod status notifier. */
    position: absolute;
    top: 0px;
    right: 0px;
}

.mod-node .actions { /* Div to detect mouse hover */
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}

.mod-node .btn-wrapper { /* CENTER THE BUTTONS DAMMIT and darken the mod image on mouseover */
    width: 100%;
    height: 225px;
    background-color: rgba(0,0,0,0.7);

    padding-top: 30px;
    text-align: center;
}

.mod-node .avail-cover {
    background-color: rgba(255, 255, 255, 0.2);
    cursor: pointer;
}

.mod-node .actions:hover { /* Display the buttons on mouseover */
    opacity: 1;
}

.mod-node .actions:hover ~ .mod-title { /* Let's also lighten the red box around the mod title on mouseover */
    background-color: #856d6d;
    transition: all 0.3s ease-in-out;
}

.mod-node .mod-progress {
    height: 3px;
    background-color: #422626;
	transition: all 0.3s ease-in-out;
}

.mod-node .actions:hover ~ .mod-progress { /* Let's also lighten the red box for the progress area */
    background-color: #856d6d;
    transition: all 0.3s ease-in-out;
}

.mod-node .mod-progress .bar {
    position: relative;
    height: 3px;
    width: 0;

    z-index: 999;
    background: #fff;
    box-shadow: 0 0 10px #fff;
}

/* ----------------------------- This is the debug dropdown button section. ------------------------------- */

.dropbtn {
    background: url(../images/dropdownicon.png) no-repeat left top;
    color: white;
    padding: 0px;
    font-size: 16px;
    border: none;
    cursor: pointer;
    width: 51px;
    height: 19px;
}

.dropbtn:hover {
    background: url(../images/dropdownicon-h.png) no-repeat left top;
    outline: none;
}

.dropbtn:focus {
    background: url(../images/dropdownicon-a.png) no-repeat left top;
    outline: none;
}

.debug-dropdown {
    position: absolute;
    bottom: 0;
    right: 10px;
    background-color: transparent;
    width: 51px;
    height: 19px;
}

.dropdown-content {
    display: none;
    padding: 5px;
    position: absolute;
    background-color: #131313;
    min-width: 150px;
    box-shadow: 6px 6px 8px 0px rgba(0,0,0,1);
    z-index: 100 !important;
    border: 1px solid black;
    top: 20px;
}

.dropbtn:focus ~ .dropdown-content {
	display: block;
}

.drop-content-btn {
    background-color: transparent;
    color: #828282;
    padding: 3px;
    font-size: 16px;
    border: none;
    cursor: pointer;
    width: 150px;
    height: 19px;
    outline: none;
    text-align: left;
}

.drop-content-btn:active {
    color: white;
}

.dropdown-lines {
    width: 150px;
}

.dropdown-lines:hover {
    background-color: rgba(117,169,210,0.3);
    box-shadow: inset 0px 0px 16px 1px rgba(117,170,210,1);
}

.dropdown-lines:hover * {
    color: rgb(220, 220, 220);
}

.show {
    display: block;
}

/* ----------------------------- Here there be BUTTONS. Let's make them pretty. ------------------------------- */

.mod-btn {
    display: inline-block;
    padding: 6px 12px;
    margin: 5px; /* Buttons need their space. They're shy. */
    margin-bottom: 0px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    width: 100px;
    font-family: Arial, Tahoma, Verdana, FreeSans, sans-serif;
    font-size: 14px;
    color: white;
    border: 0;

    background: 3px 5px no-repeat;
    background-position: center;
    height: 43px;
}

.mod-btn:hover {
    color: #efefef;
}

.mod-btn:active {
    outline: none;
    color: #a6a6a6;
}

.mod-btn:focus {
    outline: none;
}

.mod-btn .small-btn-text {
    font-size: 10px;
    line-height: 1.1;
}

.btn-green { /* Settings that create the Play button */
    background-image: url(../images/playbtn.png);
}

.btn-green:hover {
    background-image: url(../images/playbtn-h.png);
}

.btn-green:active {
    background-image: url(../images/playbtn-a.png);
}

.btn-grey { /* Settings that create the Details button */
    background-image: url(../images/detailsbtn.png);
}

.btn-grey:hover {
    background-image: url(../images/detailsbtn-h.png);
}

.btn-grey:active {
    background-image: url(../images/detailsbtn-a.png);
}

.btn-blue { /* Settings that create the Install button */
    background-image: url(../images/installbtn.png);
}

.btn-blue:hover {
    background-image: url(../images/installbtn-h.png);
}

.btn-blue:active {
    background-image: url(../images/installbtn-a.png);
}

.btn-red { /* Settings that create the Error button */
    background-image: url(../images/errorbtn.png);
}

.btn-red:hover {
    background-image: url(../images/errorbtn-h.png);
}

.btn-red:active {
    background-image: url(../images/errorbtn-a.png);
}

.btn-orange { /* Settings that create the FRED button */
    background-image: url(../images/fredbtn.png);
}

.btn-orange:hover {
    background-image: url(../images/fredbtn-h.png);
}

.btn-orange:active {
    background-image: url(../images/fredbtn-a.png);
}

.btn-yellow {
    background-image: url(../images/updatebtn.png);
}

.btn-yellow:hover {
    background-image: url(../images/updatebtn-h.png);
}

.btn-yellow:active {
    background-image: url(../images/updatebtn-a.png);
}


/* Details page */
#details-page .img-frame {
    min-height: 300px;
    background: rgb(100, 100, 100);
    position: relative;
}

#details-page .title-frame {
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    padding: 5px;
    font-size: 14px;
}

#details-page .title-frame h1 {
    font-size: 18px;
    margin-top: 5px;
    margin-bottom: 0px;
}

#details-page .date-frame {
    margin-left: 5px;
}
/* ... */

